# sealdice-chat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  chat.js  定时任务升级说明.md
backend/: PM2_GUIDE.md  README.md  README_DASHSCOPE.md  README_RAG.md  characters.example.json  characters.json  config.py  env_example.txt  main.py  pm2.config.js  pyproject.toml  requirements.txt  run_prod.py  run_prod_uv.sh  start.py  test_env.py  test_env_simple.py
backend/processors/: __init__.py  data_processor.py
backend/rag/: __init__.py  query_engine.py  vector_store.py
backend/scripts/: __init__.py  sync_5etools_data.py
backend/utils/: __init__.py  cost_monitor.py
process/: 5etools_rag_final_guide.md
referance/: character-system-guide.md
